“fix mobile overflow”

--- a/src/components/BarcodeGenerator/_barcode-generator.scss
+++ b/src/components/BarcodeGenerator/_barcode-generator.scss
@@ -1,9 +1,5 @@
 $grid-gap: 5px;
 
-input {
-  -webkit-appearance: none;
-}
-
 .barcode-generator {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
