--- a/src/components/Header/MainSection/_main-section.scss
+++ b/src/components/Header/MainSection/_main-section.scss
@@ -1,4 +1,5 @@
 #main-section {
   grid-area: main-section;
   height: 100%;
+  overflow-x: scroll;
 }
